# HousdorfPolygonGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GENERATOR_IMPLEMENTATION_PLAN.md  README.md  appConfig.cfg  experiment.json  experiment_ull_demo.json  main.cpp  vcpkg.json
HausdorffPolygonGen/: HausdorffPolygon.cpp  HausdorffPolygon.h  HausdorffPolygonGen.cpp  HausdorffPolygonGen.h  Point.h  alpha_lebedev.cpp  alpha_lebedev.h  batch_runner.cpp  batch_runner.h  case_generator.cpp  case_generator.h  dent_builder.cpp  dent_builder.h  edge_pocket_builder.cpp  edge_pocket_builder.h  experiment_config.cpp  experiment_config.h  geometry.cpp  geometry.h  hausdorff_enricher.cpp  hausdorff_enricher.h  metric_calculator.cpp  metric_calculator.h  polygon_io.cpp  polygon_io.h  square_sampler.cpp  square_sampler.h  sweep_planner.cpp  sweep_planner.h
src/: main.cpp
src/HausdorffPolygonGen/: HausdorffPolygon.cpp  HausdorffPolygon.h  HausdorffPolygonGen.cpp  HausdorffPolygonGen.h  vertex_limits.h
src/config/: config.cpp  config.h
src/grpc/: hausdorfgen_service.cpp  hausdorfgen_service.h
tools/: enrich_metadata_hausdorff.py  plot_ull_sweep.py
